Reduced the scope of the Windows build